feat: added menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-raya></app-raya>
+<a routerLink="juegos">Jugar al 3 raya</a>
+<br>
+<a routerLink="register">Registrati</a>
 <router-outlet></router-outlet>
