--- a/src/app/raya/raya.component.html
+++ b/src/app/raya/raya.component.html
@@ -1,2 +1,7 @@
 <p>raya works!</p>
-<div *ngFor="let row of partida.celdas"><span *ngFor="let col of row">{{col}} </span></div>
+<div *ngFor="let row of partida.celdas; let i=index">
+  <button (click)="occuparCelda(i,j)" *ngFor="let col of row; let j=index;">
+    <span *ngIf="col"> {{col}}</span>
+    <span *ngIf="!col"> &nbsp;</span>
+  </button>
+</div>
